--- a/dash.html
+++ b/dash.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>संपूर्ण आर्थिक सर्वेक्षण डॅशबोर्ड (Complete Survey Analytics)</title>
+    <title>संपूर्ण आर्थिक सर्वेक्षण डॅशबोर्ड Tool By Umesh (Complete Survey Analytics)</title>
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari:wght@300;400;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
