--- a/dash.html
+++ b/dash.html
@@ -138,7 +138,7 @@
 
     <!-- Top Bar -->
     <div class="top-bar">
-        <div class="app-title"><i class="fas fa-chart-line"></i> कळंब तालुका: आर्थिक सर्वेक्षण डॅशबोर्ड</div>
+        <div class="app-title"><i class="fas fa-chart-line"></i> कळंब तालुका: आर्थिक सर्वेक्षण डॅशबोर्ड Tool By Umesh </div>
         <div class="last-updated" id="updateTime">Live Data</div>
     </div>
 
